--- a/aboutme.html
+++ b/aboutme.html
@@ -94,12 +94,12 @@
 
 <tr>
     <th bgcolor="#0c71c3">SUBMISSION DATE</th>
-    <td bgcolor="#02A2BC">16 December 2024</td>
+    <td bgcolor="#02A2BC">20 January 2025</td>
 </tr>
 
 <tr>
     <th bgcolor="#0c71c3">PUBLISHED URL</th>
-    <td bgcolor="#02A2BC">https://tuanaemir.github.io/resume/</td>
+    <td bgcolor="#02A2BC">https://tuanaemir.github.io/orpahanage/</td>
 </tr>
 
         
